--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,13 @@ services: # apps containers you want to build and run
     image: anujdotnetimg:v1  # image i want to build
     build: .  # path of dockerfile location -- . means current
     container_name: anujcontainer1 # it will create container also
+  anujapp2: # creating httpd image and container
+    image: rad-httpd:version1
+    build:
+      context: .
+      dockerfile: rad-httpd.dockerfile
+    container_name: anujcontainer2
+    ports:
+    - 17714:80  # you guys can use port between 1024 to 60000
+    depends_on:
+    - anujapp1
