--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services: # apps containers you want to build and run
     image: anujdotnetimg:v1  # image i want to build
     build: .  # path of dockerfile location -- . means current
     container_name: anujcontainer1 # it will create container also
+    ports:
+    - 17715:5002
   anujapp2: # creating httpd image and container
     image: rad-httpd:version1
     build:
