--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services: # apps containers you want to build and run
   anujapp1: # name of appliction for compose
-    image: anujdotnetimg:v1  # image i want to build
+    image: anujdotnetimg:version1  # image i want to build
     build: .  # path of dockerfile location -- . means current
     container_name: anujcontainer1 # it will create container also
     ports:
